# khan

./: .gitignore  Makefile  Makefile.jenkins  README.md  Vagrantfile  instance-data.sh  khan  khan-dns  khan.cabal  role-policy.json  sources.txt
config/: completion.bash  haproxy.ede  inventory.mustache  policy.json  policy.json.example
deb/DEBIAN/: control  postinst  preinst  prerm
deb/etc/sv/khan-routes/: run
deb/etc/sv/khan-routes/log/: run
khan-cli/: Main.hs
khan-cli/Khan/CLI/: Ansible.hs  Artifact.hs  Certificate.hs  Cluster.hs  DNS.hs  Group.hs  Image.hs  Launch.hs  Metadata.hs  Profile.hs  Routing.hs  SSH.hs
khan-metadata-server/: .gitignore  Gemfile  Makefile  README.md  server.sh
khan-metadata-server/lib/: server.rb
khan-metadata-server/lib/rack/: metadata.rb
khan-metadata-sync/: Main.hs
khan-metadata-sync/Khan/Sync/: Enumerate.hs  TH.hs
khan-metadata-sync/Khan/TH/: Metadata.hs
khan/Data/: SemVer.hs
khan/Khan/: Internal.hs  Prelude.hs
khan/Khan/Internal/: AWS.hs  IO.hs  Options.hs  Orphans.hs  Parser.hs  Pretty.hs  Types.hs
khan/Khan/Model/: Ansible.hs  Host.hs  Key.hs  SSH.hs  Tag.hs
khan/Khan/Model/Ansible/: Serialisation.hs
khan/Khan/Model/AutoScaling/: LaunchConfig.hs  ScalingGroup.hs
khan/Khan/Model/EC2/: AvailabilityZone.hs  Image.hs  Instance.hs  SecurityGroup.hs
khan/Khan/Model/ELB/: HealthCheck.hs  LoadBalancer.hs  LoadBalancerPolicy.hs  Types.hs
khan/Khan/Model/IAM/: Role.hs  ServerCertificate.hs
khan/Khan/Model/R53/: HostedZone.hs  RecordSet.hs
khan/Khan/Model/S3/: Bucket.hs  Object.hs
khan/Khan/Model/Tag/: Tagged.hs
khan/Khan/Prelude/: Log.hs
metadata/: Gemfile  metadata.rb  server.rb  server.sh
metadata/latest/dynamic/instance-identity/: document
metadata/latest/meta-data/: hostname  instance-id  instance-type
metadata/latest/meta-data/iam/security-credentials/: README.md  dummy
metadata/latest/meta-data/placement/: availability-zone
metadata/rack/: metadata.rb
share/: completion.bash
src/: DNS.hs  Main.hs
src/Data/: SemVer.hs
src/Khan/: Application.hs  Artifact.hs  AutoScaling.hs  Chef.hs  Command.hs  DNS.hs  Firewall.hs  Groups.hs  Instance.hs  Internal.hs  Keys.hs  Meta.hs  Metadata.hs  Options.hs  Prelude.hs  Provision.hs  Role.hs  Security.hs  Volume.hs
src/Khan/AWS/: AutoScaling.hs  EC2.hs  IAM.hs  Route53.hs
src/Khan/CLI/: Ansible.hs  Application.hs  Artifact.hs  AutoScaling.hs  Bash.hs  Certificate.hs  Check.hs  Chef.hs  Cluster.hs  DNS.hs  Ephemeral.hs  Group.hs  HealthCheck.hs  Host.hs  Image.hs  Instance.hs  Launch.hs  Metadata.hs  Persistent.hs  Profile.hs  Provision.hs  Role.hs  Routing.hs  SSH.hs
src/Khan/Command/: DNS.hs  Internal.hs
src/Khan/Internal/: AWS.hs  Ansible.hs  Defaults.hs  IO.hs  Log.hs  OptionTypes.hs  Options.hs  Orphans.hs  Parser.hs  Parsing.hs  Pretty.hs  Program.hs  SSH.hs  Text.hs  Types.hs
src/Khan/Model/: Ansible.hs  AvailabilityZone.hs  Bucket.hs  HealthCheck.hs  HostedZone.hs  Image.hs  Instance.hs  Key.hs  LaunchConfig.hs  LoadBalancer.hs  Object.hs  Profile.hs  RecordSet.hs  Role.hs  SSH.hs  ScalingGroup.hs  SecurityGroup.hs  ServerCertificate.hs  Tag.hs
src/Khan/Model/Ansible/: Internal.hs  Serialisation.hs
src/Khan/Model/AutoScaling/: LaunchConfig.hs  ScalingGroup.hs
src/Khan/Model/EC2/: AvailabilityZone.hs  Image.hs  Instance.hs  SecurityGroup.hs
src/Khan/Model/ELB/: HealthCheck.hs  LoadBalancer.hs  LoadBalancerPolicy.hs  Types.hs
src/Khan/Model/IAM/: Role.hs  ServerCertificate.hs
src/Khan/Model/R53/: RecordSet.hs
src/Khan/Model/S3/: Bucket.hs  Object.hs
src/Khan/Model/Tag/: Internal.hs  Tagged.hs
src/Khan/Options/: Internal.hs
src/Khan/Prelude/: Log.hs
test/: Main.hs
