name:                  khan
version:               0.2.8
synopsis:              Opinionated Provisioning
homepage:              http://github.com/brendanhay/khan
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/khan.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall

    exposed-modules:
        Data.SemVer

      , Khan.CLI.Ansible
      , Khan.CLI.Artifact
      , Khan.CLI.Certificate
      , Khan.CLI.Cluster
      , Khan.CLI.DNS
      , Khan.CLI.Group
      , Khan.CLI.Image
      , Khan.CLI.Launch
      , Khan.CLI.Metadata
      , Khan.CLI.Profile
      , Khan.CLI.Routing
      , Khan.CLI.SSH

      , Khan.Internal

      , Khan.Model.Ansible
      , Khan.Model.AutoScaling.LaunchConfig
      , Khan.Model.AutoScaling.ScalingGroup
      , Khan.Model.EC2.AvailabilityZone
      , Khan.Model.EC2.Image
      , Khan.Model.EC2.Instance
      , Khan.Model.EC2.SecurityGroup
      , Khan.Model.ELB.HealthCheck
      , Khan.Model.ELB.LoadBalancer
      , Khan.Model.ELB.LoadBalancerPolicy
      , Khan.Model.IAM.Role
      , Khan.Model.IAM.ServerCertificate
      , Khan.Model.Key
      , Khan.Model.R53.HostedZone
      , Khan.Model.R53.RecordSet
      , Khan.Model.S3.Bucket
      , Khan.Model.S3.Object
      , Khan.Model.SSH
      , Khan.Model.Tag

      , Khan.Prelude

    other-modules:
        Khan.Internal.AWS
      , Khan.Internal.IO
      , Khan.Internal.Options
      , Khan.Internal.Orphans
      , Khan.Internal.Parser
      , Khan.Internal.Pretty
      , Khan.Internal.Types

      , Khan.Model.Ansible.Serialisation
      , Khan.Model.Tag.Tagged

      , Khan.Prelude.Log

    build-depends:
        aeson                >= 0.7
      , aeson-pretty
      , amazonka             >= 0.2.6
      , ansi-wl-pprint
      , attoparsec
      , base                 >= 4.6 && < 5
      , bytestring
      , conduit              >= 1.1
      , conduit-extra
      , containers
      , directory
      , ede                  >= 0.1.3
      , errors
      , http-conduit
      , http-types
      , mtl
      , old-locale
      , optparse-applicative >= 0.8
      , prelude-prime
      , process              >= 1.2
      , random
      , semigroups
      , shelly
      , system-filepath      >= 0.4.9
      , text                 >= 1.0
      , text-format
      , time
      , transformers
      , unix
      , unordered-containers
      , wl-pprint-text

    if impl(ghc < 7.7)
       build-depends: tagged

executable khan
    default-language:  Haskell2010
    main-is:           src/Main.hs
    ghc-options:       -Wall -rtsopts -threaded

    build-depends:
        amazonka
      , base                 >= 4.6 && < 5
      , errors
      , khan
      , optparse-applicative
      , text                 >= 1.0
      , unordered-containers

test-suite tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    ghc-options:       -Wall -rtsopts -threaded

    build-depends:
        base             >= 4.6 && < 5
      , khan
      , smallcheck
      , tasty
      , tasty-smallcheck
      , text
