name:                  khan
version:               0.4.4
synopsis:              Opinionated Provisioning
homepage:              http://github.com/brendanhay/khan
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/khan.git

library
    default-language:  Haskell2010
    hs-source-dirs:    khan

    ghc-options:       -Wall

    exposed-modules:
        Data.SemVer

      , Khan.Internal

      , Khan.Model.Ansible
      , Khan.Model.Ansible.Serialisation
      , Khan.Model.AutoScaling.LaunchConfig
      , Khan.Model.AutoScaling.ScalingGroup
      , Khan.Model.EC2.AvailabilityZone
      , Khan.Model.EC2.Image
      , Khan.Model.EC2.Instance
      , Khan.Model.EC2.SecurityGroup
      , Khan.Model.ELB.HealthCheck
      , Khan.Model.ELB.LoadBalancer
      , Khan.Model.ELB.LoadBalancerPolicy
      , Khan.Model.ELB.Types
      , Khan.Model.Host
      , Khan.Model.IAM.Role
      , Khan.Model.IAM.ServerCertificate
      , Khan.Model.Key
      , Khan.Model.R53.HostedZone
      , Khan.Model.R53.RecordSet
      , Khan.Model.S3.Bucket
      , Khan.Model.S3.Object
      , Khan.Model.SSH
      , Khan.Model.Tag
      , Khan.Model.Tag.Tagged

      , Khan.Prelude
      , Khan.Prelude.Log

    other-modules:
        Khan.Internal.AWS
      , Khan.Internal.IO
      , Khan.Internal.Options
      , Khan.Internal.Orphans
      , Khan.Internal.Parser
      , Khan.Internal.Pretty
      , Khan.Internal.Types

    build-depends:
        aeson                >= 0.7
      , aeson-pretty
      , ansi-wl-pprint
      , amazonka             >= 0.4.8
      , attoparsec
      , base                 >= 4.7 && < 5
      , bytestring
      , conduit              >= 1.1
      , conduit-extra
      , ede                  >= 0.1.3
      , errors
      , hashable
      , http-client          == 0.3.*
      , http-conduit
      , http-types
      , mtl                  >= 2.2.1
      , network
      , old-locale
      , optparse-applicative >= 0.8
      , prelude-prime
      , process              >= 1.2
      , random
      , semigroups
      , system-fileio
      , system-filepath      >= 0.4.9
      , text                 >= 1.0
      , text-format
      , time
      , transformers         == 0.4.*
      , unix
      , unordered-containers

    if impl(ghc < 7.7)
       build-depends: tagged

executable khan
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    khan-cli

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N1

    other-modules:
        Khan.CLI.Ansible
      , Khan.CLI.Artifact
      , Khan.CLI.Certificate
      , Khan.CLI.Cluster
      , Khan.CLI.DNS
      , Khan.CLI.Group
      , Khan.CLI.Image
      , Khan.CLI.Launch
      , Khan.CLI.Metadata
      , Khan.CLI.Profile
      , Khan.CLI.Routing
      , Khan.CLI.SSH

    build-depends:
        aeson
      , aeson-pretty
      , amazonka
      , ansi-wl-pprint
      , base                 >= 4.7 && < 5
      , bytestring
      , conduit
      , ede
      , errors
      , khan
      , optparse-applicative
      , process
      , semigroups
      , system-fileio
      , system-filepath
      , text
      , text-format
      , time
      , unix
      , unordered-containers

executable khan-metadata-sync
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    khan-metadata-sync

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N -ddump-splices

    build-depends:
        ansi-wl-pprint
      , base                 >= 4.7 && < 5
      , http-conduit
      , khan
      , optparse-applicative
      , semigroups
      , system-fileio
      , system-filepath
      , text

test-suite tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    ghc-options:       -Wall -rtsopts -threaded

    build-depends:
        base             >= 4.7 && < 5
      , khan
      , smallcheck
      , tasty
      , tasty-smallcheck
      , text
