name:                  khan
version:               0.4.16
synopsis:              Opinionated Provisioning
homepage:              http://github.com/brendanhay/khan
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2014 Brendan Hay
stability:             Experimental
category:              AWS, Cloud, Infrastructure
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/khan.git

library
    default-language:  Haskell2010
    hs-source-dirs:    khan

    ghc-options:       -Wall

    exposed-modules:
        Khan.Internal

      , Khan.Model.Ansible
      , Khan.Model.Ansible.Serialisation
      , Khan.Model.AutoScaling.LaunchConfig
      , Khan.Model.AutoScaling.ScalingGroup
      , Khan.Model.EC2.AvailabilityZone
      , Khan.Model.EC2.Image
      , Khan.Model.EC2.Instance
      , Khan.Model.EC2.SecurityGroup
      , Khan.Model.ELB.HealthCheck
      , Khan.Model.ELB.LoadBalancer
      , Khan.Model.ELB.LoadBalancerPolicy
      , Khan.Model.ELB.Types
      , Khan.Model.Host
      , Khan.Model.IAM.Role
      , Khan.Model.IAM.ServerCertificate
      , Khan.Model.Key
      , Khan.Model.R53.HostedZone
      , Khan.Model.R53.RecordSet
      , Khan.Model.S3.Bucket
      , Khan.Model.S3.Object
      , Khan.Model.SSH
      , Khan.Model.Tag
      , Khan.Model.Tag.Tagged

      , Khan.Prelude
      , Khan.Prelude.Log

    other-modules:
        Khan.Internal.AWS
      , Khan.Internal.IO
      , Khan.Internal.Options
      , Khan.Internal.Orphans
      , Khan.Internal.Parser
      , Khan.Internal.Pretty
      , Khan.Internal.Types

    build-depends:
        aeson                >= 0.7
      , aeson-pretty
      , amazonka             >= 0.5.0
      , ansi-wl-pprint
      , attoparsec
      , base                 >= 4.7    && < 5
      , base16-bytestring    == 0.1.*
      , bifunctors           >= 4.1    && < 5
      , byteable             == 0.1.*
      , bytestring
      , case-insensitive     >= 1.2    && < 2
      , conduit              >= 1.1
      , conduit-extra
      , cryptohash           == 0.11.*
      , cryptohash-conduit   == 0.1.*
      , ede                  >= 0.2.3
      , errors
      , hashable
      , http-client          == 0.3.*
      , http-conduit
      , http-types
      , lens-family-core     == 1.1.*
      , mtl                  >= 2.2.1
      , network
      , old-locale
      , optparse-applicative == 0.11.*
      , prelude-prime
      , process              >= 1.2
      , random
      , semigroups
      , semver               == 0.3.*
      , system-fileio
      , system-filepath      >= 0.4.9
      , text                 >= 1.0
      , text-format
      , text-manipulate
      , time
      , transformers         == 0.4.*
      , unix
      , unordered-containers

    if impl(ghc < 7.7)
       build-depends: tagged

executable khan
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    khan-cli

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N1

    other-modules:
        Khan.CLI.Ansible
      , Khan.CLI.Artifact
      , Khan.CLI.Certificate
      , Khan.CLI.Cluster
      , Khan.CLI.DNS
      , Khan.CLI.Group
      , Khan.CLI.Image
      , Khan.CLI.Launch
      , Khan.CLI.Metadata
      , Khan.CLI.Profile
      , Khan.CLI.SSH

    build-depends:
        aeson
      , aeson-pretty
      , amazonka
      , ansi-wl-pprint
      , base
      , bytestring
      , conduit
      , errors
      , khan
      , optparse-applicative
      , process
      , semigroups
      , semver
      , system-fileio
      , system-filepath
      , text
      , text-format
      , time
      , unix
      , unordered-containers

executable khan-metadata-sync
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    khan-metadata-sync

    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        ansi-wl-pprint
      , base
      , http-conduit
      , khan
      , process
      , semigroups
      , system-fileio
      , system-filepath
      , temporary
      , text

test-suite tests
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Main.hs
    ghc-options:       -Wall -threaded -rtsopts

    build-depends:
        base
      , khan
      , smallcheck
      , tasty
      , tasty-smallcheck
      , text
